--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ crash.*.log
 *.tfvars
 *.tfvars.json
 
+# Exclude backend configuration files (contains bucket names)
+backend.hcl
+
 # Ignore override files as they are usually used to override resources locally
 override.tf
 override.tf.json
