Fix: backend-config 지정

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Terraform Init
         id: init
-        run: terraform init
+        run: terraform init -backend-config=backend.hcl
 
       - name: Terraform Validate
         id: validate
@@ -113,7 +113,7 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Terraform Init
-        run: terraform init
+        run: terraform init -backend-config=backend.hcl
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
